<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.delacalle.delacalle.delacalleapp.PageFragmentInformacionDetalle">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciontitulonombre"
               android:id="@+id/textViewtituloNombreRestauranteDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacionnombre"
               android:id="@+id/textViewNombreRestauranteDetalle"
              />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciontitulodescripcion"
               android:id="@+id/textViewTituloDescripcionDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciondescripcion"
               android:id="@+id/textViewDescripcionDetalle"
                />


           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacionpromo"
               android:id="@+id/textViewTituloPromocionDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacionpromo"
               android:id="@+id/textViewPromocionDetalle"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacionabierto"
               android:id="@+id/textViewTituloHorarioDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacionabierto"
               android:id="@+id/textViewHorarioDetalle"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciontitulodireccion"
               android:id="@+id/textViewTituloDireccionDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciondireccion"
               android:id="@+id/textViewDireccionDetalle"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciontitulotelefono"
               android:id="@+id/textViewTituloTelefonoDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciontelefono"
               android:id="@+id/textViewTelefonoDetalle"
              />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciondomicilio"
               android:id="@+id/textViewTituloDomicilioDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciondomicilio"
               android:id="@+id/textViewDomicilioDetalle"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacioneventos"
               android:id="@+id/textViewTituloEventosDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacioneventos"
               android:id="@+id/textViewEventosDetalle"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformaciontituloweb"
               android:id="@+id/textViewTituloWebDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <TextView
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacionweb"
               android:id="@+id/textViewWebDetalle"
               />

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/fragmentinformacioncalifica"
               android:id="@+id/textViewTituloCalificacionDetalle"
               android:textSize="15sp"
               android:textStyle="bold" />

           <RatingBar
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:id="@+id/ratingBarCalificacionDetalle"
               android:theme="@style/RatingBar"
               />



       </LinearLayout>




   </ScrollView>


</FrameLayout>
