<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/fondomenublanco768x1280"
    android:layout_height="match_parent"
    app:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <!--Internacional-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/internacionalrelative"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_internacionalc"
                    android:layout_gravity="left"
                    android:id="@+id/internacionalimageView"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriainternacional"
                    android:textColor="@color/colorCategoriaInternacional"
                    android:id="@+id/textViewCInternacional"
                    android:textSize="26sp"
                    android:layout_gravity="center"
                    />
            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"/>

            <!--  tipico-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tipicorelative"
                android:orientation="horizontal"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_tipicoc"
                    android:id="@+id/imageView"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriatipico"
                    android:textColor="@color/colorCategoriaTipica"
                    android:id="@+id/textViewCTipico"
                    android:textSize="26sp"
                    android:layout_gravity="center"
                     />


            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"

                />

            <!--Gourmet-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/gourmetlrelative"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_gourmetc"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/imageView5"

                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriagourmet"
                    android:textColor="@color/colorCategoriaGourmet"
                    android:id="@+id/textViewCGourmet"
                    android:textSize="26sp"
                    android:layout_gravity="center"
                    />



            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!--Mariscos-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/mariscosrelative"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_mariscosc"
                    android:layout_gravity="center_vertical"
                    android:id="@+id/imageView2"
                    />



                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriamariscos"
                    android:textColor="@color/colorCategoriaMariscos"
                    android:id="@+id/textViewCMariscos"
                    android:textSize="26sp"
                    android:layout_gravity="center"
                     />

            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!--Rapida-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rapidarelative"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_rapidac"
                    android:id="@+id/imageView4"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriarapida"
                    android:textColor="@color/colorCategoriaRapida"
                    android:id="@+id/textViewCRapida"
                    android:layout_gravity="center"
                    android:textSize="26sp"
                    />



            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!-- Almuerzo-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/almuerzorelative"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_almuerzoc"
                    android:id="@+id/imageView3"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriaalmuerzo"
                    android:textColor="@color/colorCategoriaAlmuerzo"
                    android:id="@+id/textViewCPopular"
                    android:layout_gravity="center"
                    android:textSize="26sp"
                     />



            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!-- Jugos-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jugosrelative"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_jugosc"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriajugos"
                    android:textColor="@color/colorCategoriaJugos"
                    android:id="@+id/textViewCJugos"
                    android:layout_gravity="center"
                    android:textSize="26sp"
                    />

            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!-- vegetariano-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/vegetarianorelative"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_vegetarianoc"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriavegetariano"
                    android:textColor="@color/colorCategoriaVegetariano"
                    android:id="@+id/textViewCVegetariano"
                    android:textSize="26sp"
                    android:layout_gravity="center" />


            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!--    A domicilio-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/domiciliorelative"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_domicilioc"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriadomicilio"
                    android:textColor="@color/colorCategoriaDomicilio"
                    android:id="@+id/textViewCDomicilio"
                    android:textSize="26sp"
                    android:layout_gravity="center"
                     />



            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!--carnes-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/carnesrelative"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_carnesc"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriacarnes"
                    android:textColor="@color/colorCategoriaCarnes"
                    android:id="@+id/textViewCCarnes"
                    android:textSize="26sp"
                    android:layout_gravity="center"
                     />



            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!-- helados-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/heladorelative"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_heladosc"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriahelado"
                    android:textColor="@color/colorCategoriaHelados"
                    android:id="@+id/textViewCHelados"
                    android:layout_gravity="center"
                    android:textSize="26sp"
                    />



            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!-- Promociones-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/promosrelative"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_promoc"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriapromo"
                    android:textColor="@color/colorCategoriaPromociones"
                    android:id="@+id/textViewCPromos"
                    android:textSize="26sp"
                   android:layout_gravity="center" />



            </LinearLayout>

            <View
                android:layout_width="500dp"
                android:layout_height="1dp"
                android:background="#a8a8a8"
                android:layout_gravity="center"
                />

            <!-- Promociones-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/eventosrelative"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_eventosc"
                     />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/categoriaevento"
                    android:textColor="@color/colorCategoriaEventos"
                    android:id="@+id/textViewCEventos"
                    android:textSize="26sp"
                   android:layout_gravity="center" />


            </LinearLayout>



        </LinearLayout>



    </ScrollView>


</LinearLayout>
